# rust-user-api-service-ex

./: .env  .gitignore  Cargo.toml  README.md
migration/src/: m20220101_000001_create_table.rs
migrations/: 0001_users_table.sql
src/: main.rs
src/api/: posts.rs  users.rs
src/handlers/: users.rs
src/models/: posts.rs  users.rs
