[package]
name = "posts-service-api-ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
axum = { version = "0.6.20", features = ["macros"] }
sea-orm = { version = "0.12.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { verson = "1.0.189", features = ["derive"]}
serde_json = "1.0.68"
reqwest = { version = "0.11.22", features = ["json"] }
anyhow = "1.0.75"
